--- a/expenses_project/templates/base_auth.html
+++ b/expenses_project/templates/base_auth.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="Mark Otto, Jacob Thornton, and Bootstrap contributors">
     <meta name="generator" content="Hugo 0.104.2">
-    <title>Fat Cat
+    <title>Maoneki
         {% block title %} 
         {% endblock %}
     </title>
@@ -40,7 +40,7 @@
 
           <div class="row mb-2">
             <div class="col-md-4"></div>
-            <div class="col-md-4 text-center"><img src="{% static 'img/kitty.png' %}" width="75px"></div>
+            <div class="col-md-4 text-center"><img src="{% static 'img/kitty.png' %}" width="140px"></div>
             <div class="col-md-4"></div>
           </div>
 
@@ -51,7 +51,7 @@
           </div>
 
           <div class="row text-end">
-            <p class="mt-5 mb-3 text-muted">&copy; Fat Cat 2022</p>
+            <p class="mt-5 mb-3 text-muted fs-5">&copy; Group 13</p>
           </div>
       
         </div>
