--- a/expenses_project/templates/partial/sidebar.html
+++ b/expenses_project/templates/partial/sidebar.html
@@ -3,8 +3,8 @@
 <nav id="sidebarMenu" class="col-md-3 col-lg-2 d-md-block bg-light sidebar collapse position-relative">
   <div class="mt-3 position-absolute top-0 start-50 translate-middle-x">
     <div class="col text-center">
-      <img src="{% static 'img/kitty.png' %}" width="50px">
-      <h5 class="align-items-center">Fat Cat</h5>
+      <img src="{% static 'img/kitty.png' %}" width="70px">
+      <h5 class="align-items-center">Maoneki</h5>
     </div>
     
   </div>
