--- a/expenses_project/templates/admin/base_site.html
+++ b/expenses_project/templates/admin/base_site.html
@@ -4,8 +4,8 @@
 {% block branding %}
 
 <h1 id="head">
-    <img src="{% static 'img/kitty.png' %}" width="36px;" height="36px;">
-    <span id="admin-site-title">Fat Cat Admin</span>
+    <img src="{% static 'img/kitty.png' %}" width="100px;" height="100px;">
+    <span id="admin-site-title">Maoneki Admin</span>
     
 </h1>
 
